prwebapi3/templates/prwebapi-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prwebingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /pr(/|$)(.*)
        backend:
          serviceName: prwebapi
          servicePort: 80
